--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8811
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/iot?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/iot?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useServerPrepStmts=false&rewriteBatchedStatements=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=demo123
 
@@ -11,5 +11,14 @@ spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.serialization.indent-output=true
 
-spring.devtools.restart.enabled=true
+logging.level.root=info
+logging.level.org.springframework.web=error
+logging.file=syslog.log
+logging.file.max-size=10MB
 
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+
+wechat.url=https://api.weixin.qq.com/cgi-bin/token
+wechat.appid=wx3313f027c849621e
+wechat.secret=c00ec9b39362ae835f3ca4813bcea4ee
