邀请码功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8888
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/iot?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useServerPrepStmts=false&rewriteBatchedStatements=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/iot?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=demo123
 
@@ -20,5 +21,5 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=5
 
 wechat.url=https://api.weixin.qq.com/cgi-bin/token
-wechat.appid=wx3313f027c849621e
-wechat.secret=c00ec9b39362ae835f3ca4813bcea4ee
+wechat.appid=wx500997b7ea070b58
+wechat.secret=e221f0c549d7120166bdcaf4d6628f03
