功能新增與完善

--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>4.6.2</version>
@@ -84,6 +79,7 @@
     </dependencies>
 
     <build>
+        <finalName>ipro</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
