--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-server.port=8888
+server.port=8866
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/iot?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=demo123
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -12,13 +13,15 @@ spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.serialization.indent-output=true
 
-logging.level.root=info
+logging.level.root=error
 logging.level.org.springframework.web=error
 logging.file=syslog.log
 logging.file.max-size=10MB
 
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=5
+
+spring.servlet.multipart.max-file-size=1MB
 
 wechat.url=https://api.weixin.qq.com/cgi-bin/token
 wechat.appid=wx500997b7ea070b58
